--- a/Index.css
+++ b/Index.css
@@ -27,13 +27,14 @@ body{
 /* mise en page pour l'option de connexion */
 .fondconnexion{
     background-color:  rgb(237, 217, 189);
-    text-align: right;
-    width: 90%;
+    text-align: center;
+    width: 100%;
     height: 120%;
 }
 
 .fond{
     background-color: rgb(237, 217, 189);
+    width: 100%;
 }
 
 /* decoration des lettres */
@@ -48,8 +49,9 @@ body{
 .fondcara{
     text-align: left;
     background-color: rgb(237, 217, 189) ;
-    width: 15%;
+    width: 25%;
     font-size: large;
+    padding-right: 5%;
 }
 
 /* mise en page de la description du site */
@@ -58,42 +60,10 @@ body{
     font-size: 20;
 }
 
-/* mise en page de la lettre sur la quelle on est sur la page de resultat */
-.lettreclic{
-    color: rgb(74, 25, 1);
-}
-
-/* mise en page du fond des sports correspondant à la recherche  */
-.tabsport{
-    border-color: rgb(0, 6, 6);
-    border-style:groove;
-    background-color: rgb(255, 173, 110);
-    border-inline-style : none; 
-}
 
 .fondins{
     background-color: rgb(237, 217, 189) ;
 }
-
-
-.mon_bouton {
-    background-color:rgb(255, 245, 231) ; /* Couleur de fond */
-    border: none; /* Pas de bordure */
-    color: rgb(0, 0, 0); /* Couleur du texte */
-    padding: 0% 0%; /* Espacement du texte */
-    text-align: center; /* Alignement horizontal */
-    text-decoration: none; /* Pas de soulignement */
-    display: inline-block; /* Affichage en ligne */
-    font-size: 16px; /* Taille de police */
-    margin: 1% 1%; /* Marge */
-    cursor: pointer; /* Curseur de souris */
-    border-radius: 4px; /* Coins arrondis */
-    transition: 0.3s; /* Transition pour l'effet hover */
-  }
-  
-  .mon-bouton:hover {
-    background-color: #3e8e41; /* Nouvelle couleur de fond au survol */
-  }
   
 a{
     text-decoration:none;
@@ -108,4 +78,14 @@ a{
 
 .cara_sport{
     margin-left: 10%;
+}
+
+.tabsport{
+    border: 1px; 
+    align-self: center;
+    vertical-align: middle;
+    border-color: #d06e27;
+    border-style: dashed;
+    margin: auto;
+    border-collapse: collapse;
 }
